# realbot-python-sdk

./: LICENSE  README.md  README_zh.md  dprint.json  justfile  pyproject.toml
src/realhand/: __init__.py  exceptions.py  motion_timer.py  relay.py
src/realhand/arm/: __init__.py
src/realhand/arm/a7/: __init__.py  a7.py  consts.py  motor.py
src/realhand/arm/a7_lite/: __init__.py  a7_lite.py  consts.py  model.py  motor.py
src/realhand/arm/common/: __init__.py  control_mode.py  model.py
src/realhand/arm/kinetix/: __init__.py  kinetix.py
src/realhand/comm/can/: can.py
src/realhand/hand/: __init__.py
src/realhand/hand/l20/: __init__.py  angle.py  events.py  fault.py  force_sensor.py  l20.py  speed.py  temperature.py  torque.py  version.py
src/realhand/hand/l20lite/: __init__.py  angle.py  events.py  fault.py  force_sensor.py  l20lite.py  speed.py  temperature.py  torque.py  version.py
src/realhand/hand/l25/: __init__.py  angle.py  events.py  fault.py  force_sensor.py  l25.py  speed.py  temperature.py  torque.py  version.py
src/realhand/hand/l6/: __init__.py  angle.py  current.py  events.py  fault.py  force_sensor.py  l6.py  speed.py  temperature.py  torque.py  version.py
src/realhand/queue/: __init__.py  iterable_queue.py
tests/: conftest.py  test_motion_timer.py
tests/arm/a7/: conftest.py  test_basic.py  test_complex_motion.py  test_extra.py  test_lifecycle.py  test_motion_stop.py  test_safety.py
tests/arm/a7_lite/: conftest.py  test_basic.py  test_complex_motion.py  test_extra.py  test_lifecycle.py  test_motion_stop.py  test_safety.py
tests/hand/l20lite/: conftest.py  test_angle.py  test_error_handling.py  test_fault.py  test_force_sensor.py  test_lifecycle.py  test_polling.py  test_speed.py  test_streaming.py  test_stress.py  test_temperature.py  test_torque.py  test_validation.py  test_version.py
tests/hand/l25/: conftest.py  test_angle.py  test_error_handling.py  test_fault.py  test_force_sensor.py  test_lifecycle.py  test_polling.py  test_speed.py  test_streaming.py  test_stress.py  test_temperature.py  test_torque.py  test_validation.py  test_version.py
tests/hand/l6/: conftest.py  test_angle.py  test_current.py  test_error_handling.py  test_fault.py  test_force_sensor.py  test_lifecycle.py  test_polling.py  test_speed.py  test_streaming.py  test_stress.py  test_temperature.py  test_torque.py  test_validation.py  test_version.py
tests/hand/o6/: conftest.py  test_acceleration.py  test_angle.py  test_error_handling.py  test_fault.py  test_force_sensor.py  test_lifecycle.py  test_polling.py  test_speed.py  test_streaming.py  test_stress.py  test_temperature.py  test_torque.py  test_validation.py  test_version.py
(+14 files in other folders)
